--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -208,6 +208,22 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"/>
 
+                    <Button
+                        android:id="@+id/chatbot"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Disha"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"/>
+
+                    <Button
+                        android:id="@+id/mentors"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Connect with Mentors"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"/>
+
 <!--                    <View-->
 <!--                        android:layout_width="match_parent"-->
 <!--                        android:layout_height="1dp"-->
