--- a/app/src/main/res/layout/meetupcard.xml
+++ b/app/src/main/res/layout/meetupcard.xml
@@ -13,20 +13,13 @@
         android:padding="0dp"
         android:background="@drawable/meetupbg"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-
-
-        >
-
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="fitXY"
-
-            android:src="@drawable/img">
-
-
+            android:src="@drawable/meet2">
         </ImageView>
 
         <LinearLayout
