--- a/app/src/main/res/layout/mentorcard.xml
+++ b/app/src/main/res/layout/mentorcard.xml
@@ -124,11 +124,13 @@
 
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/domain"
                     android:background="@drawable/schedulecard"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
+                    android:textColor="@color/black"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
